# ChangeLog for sys-libs/glibc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.742 2011/02/07 07:27:39 kumba Exp $

  07 Feb 2011; Joshua Kinard <kumba@gentoo.org> glibc-2.5-r4.ebuild,
  glibc-2.5.1.ebuild:
  Removed mips-headers references.

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> glibc-2.5-r4.ebuild:
  Drop to ~mips

  06 Feb 2011; Magnus Granberg <zorry@gentoo.org> glibc-2.13.ebuild:
  We do not longer support old SSP for GCC 3.X and patch fail #353811

*glibc-2.13 (05 Feb 2011)

  05 Feb 2011; Mike Frysinger <vapier@gentoo.org> +glibc-2.13.ebuild:
  Version bump.

*glibc-2.12.2 (09 Jan 2011)

  09 Jan 2011; Mike Frysinger <vapier@gentoo.org> +glibc-2.12.2.ebuild:
  Version bump.

*glibc-2.11.3 (08 Jan 2011)

  08 Jan 2011; Mike Frysinger <vapier@gentoo.org> +glibc-2.11.3.ebuild:
  Version bump.

  14 Dec 2010; Matt Turner <mattst88@gentoo.org> glibc-2.12.1-r3.ebuild:
  Add ~mips

  18 Nov 2010; Mike Frysinger <vapier@gentoo.org> glibc-2.12.1-r3.ebuild:
  Add ports tarball #345811 by Matt Turner.

  09 Nov 2010; Raúl Porcel <armin76@gentoo.org> glibc-2.11.2-r3.ebuild:
  ia64/sh/sparc stable wrt #341755

  03 Nov 2010; Markus Meier <maekke@gentoo.org> glibc-2.11.2-r3.ebuild:
  arm stable, bug #341755

  01 Nov 2010; Jeroen Roovers <jer@gentoo.org> glibc-2.11.2-r3.ebuild:
  Stable for HPPA PPC (bug #341755).

  01 Nov 2010; Mark Loeser <halcy0n@gentoo.org> glibc-2.11.2-r3.ebuild:
  Mark stable for ppc64; bug #341755

  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  glibc-2.11.2-r3.ebuild:
  stable x86, security bug 341755

  01 Nov 2010; Tobias Klausmann <klausman@gentoo.org>
  glibc-2.11.2-r3.ebuild:
  Stable on alpha, bug #341755

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> glibc-2.11.2-r3.ebuild:
  Stable on amd64 wrt bug #341755

*glibc-2.12.1-r3 (31 Oct 2010)
*glibc-2.11.2-r3 (31 Oct 2010)
