@@ -74,7 +74,7 @@ EBUILD glibc-2.11.2-r3.ebuild 8375 RMD160 800dbbaf586794c984d02375a7d984b9d4b6f6
 EBUILD glibc-2.11.3.ebuild 8381 RMD160 fde254014f1cf04b420fe8a01d9112c4d2bb3b15 SHA1 0bc0aaf0bc00bbaeeb0a84e0090983f66d464fb4 SHA256 8db3139feb4944a097bcaa1d5f87e89862c5e4c7cd425dba97e67bb4b106d498
 EBUILD glibc-2.12.1-r3.ebuild 8742 RMD160 59a9f5cf261a657ccbe3c2913b6b64ad57c61c3b SHA1 5a190f7915f945a8ebf002b55dc86c27cfbafca9 SHA256 122b698a3f2519106636fee326d72fcf2f2369eb807ef43d573197c99bb252e3
 EBUILD glibc-2.12.2.ebuild 8740 RMD160 84fddc96440cc059b1b67b65daaf5e1380d0b6d2 SHA1 5190b96eb0294f3c751a18fec0a390202a68720b SHA256 691a4677af538f61a84236a98638633a6de90f309439403efc0271f665478e0d
-EBUILD glibc-2.13.ebuild 8611 RMD160 94945bd3d6b97ba833f49f2db1eae08e897fa178 SHA1 6521e0aa6eb334344127c1233c15c9b8dc117faa SHA256 bd2eeaeea9354036354629bedea119c556ff85ac3ffbb7f21d5495ad9a996896
+EBUILD glibc-2.13.ebuild 8823 RMD160 0133350bb2cf369f914fb1629b9840d0e990ec1a SHA1 f28e8814abe68d94dd1bdc404ef34f3f55f872db SHA256 39968acfebb572f713a34ed5e0558b6ee26b6b6e8571357cbfca1e734674900f
 EBUILD glibc-2.2.5-r10.ebuild 4847 RMD160 829dc6d11434ff2d8d202277595b0817b1a9ab28 SHA1 19523459701cabf750a777b17cbe0af34d4688dd SHA256 454a2b5d6201ab615f00c50987c7ac0328d22cc66db582851fcd27e2a967b17f
 EBUILD glibc-2.5-r4.ebuild 38511 RMD160 a3b93923cd15ace0ea30641d30afe9da9327415f SHA1 08979a91721c31fb9587e2f183f194361c4406d0 SHA256 bf1e52a7dfa6df7259bc51857f0630950a763dcb8ce70325ec2ac7651a12d333
 EBUILD glibc-2.5.1.ebuild 38586 RMD160 384dc7e6facd139bd1a27941bb2c3fcc4c7bbc8c SHA1 d97ceae0c66a229c7c80cf71e49a0b152caed27b SHA256 552d01eea084e1f9cac9980799ec67c30983063cdd790298dbe8b643b2ea18f3
@@ -83,5 +83,5 @@ EBUILD glibc-2.7-r2.ebuild 12941 RMD160 461ae1f64ad710426a485eb5593f1e13c4a618d8
 EBUILD glibc-2.8_p20080602-r1.ebuild 13488 RMD160 6b58dc46eb346a67557e5ce6b84a10a3688d649a SHA1 a89f61f4add7950715fedd27a4cc9fb68599f4c1 SHA256 f560d233bb3b0bcdda61fe6d052f54c253d43c9b31f7a2070e9b2f4003131b30
 EBUILD glibc-2.9_p20081201-r2.ebuild 7772 RMD160 ad3a0203d514fea907712ada8a9c3970267aa823 SHA1 690094c7a7b7c5a0b016f41ba519d4ecaa8a1cea SHA256 bb909d9117328ca426af80e6b6d78cb3a96b0efe03d511ead4bf8d62341f42a2
 EBUILD glibc-2.9_p20081201-r3.ebuild 7806 RMD160 6d696692a2e122bfdc149aea75368cea00bce92c SHA1 0df0da8ccd0a95084f849bdb92bfc3389efba74f SHA256 995c0e939cc7146e347d3f8caafbf4ad720a7caa7dfd0a9562f5a2877533a45c
-MISC ChangeLog 132978 RMD160 34cf4da2ab3e3edd91b9ac033660e8860419a110 SHA1 3de8d915cbeedadb78b5ca37b7bf7789d8502335 SHA256 7a28e57547d57d7e6e061522576d24687aea4cd34e00015d80fd9d3dce9a29cf
+MISC ChangeLog 133111 RMD160 ff413f9dbee699f95e9f3afd68dca3aee13cf59f SHA1 23b406aed19783ec2ea12152a2dba73af3e6c670 SHA256 7d0a92e6e7dcf9bca359ed9301468744990c104a130516d872a3cf531a4e5be6
 MISC metadata.xml 539 RMD160 cf4d236b54a77b3cea382d53e4e61721bd14169b SHA1 b54ad589378da193ddc89676f8468c6d1b79521f SHA256 d7cb6dd119c81b5bf12c360af3705ca31a56ffa8bec999b44faa63c183719c31
